--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-
-    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/mediaelementplayer.css" rel="stylesheet">
 
+    <script src="lib/jquery-2.1.3.js"></script>
+    <script src="lib/mediaelement-and-player.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -23,6 +24,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/factories.js"></script>
+    <script src="js/directives.js"></script>
   </head>
 
   <body ng-app="starter">
