--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
 
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/mediaelementplayer.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <script src="lib/jquery-2.1.3.js"></script>
     <script src="lib/mediaelement-and-player.js"></script>
